[tool.poetry]
name = "monarch-py"
version = "0.2.3"
description = "Monarch Initiative data access library"
authors = [
    "Kevin Schaper <kevin@tislab.org>",
    "Glass Elsarboukh <glass@tislab.org>",
    "The Monarch Initiative <info@monarchinitiative.org>"
]
packages = [
    { include = "monarch_py", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pydantic = "^1.9.1"
linkml = "^1.3.14"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
autoflake = "^1.7.7"

[tool.poetry.scripts]
monarch = "src.monarch_py.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
