[tool.poetry]
name = "monarch-py"
version = "0.9.3"
description = "Monarch Initiative data access library"
authors = [
    "Kevin Schaper <kevin@tislab.org>",
    "Glass Elsarboukh <glass@tislab.org>",
    "The Monarch Initiative <info@monarchinitiative.org>"
]
packages = [
    { include = "monarch_py", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
linkml = "^1.5.5"
pydantic = "^1.9.1"
requests = "^2.28.1"
typer = "^0.7.0"
typer-cli = "^0.0.13"
rich = "*"
docker = "^6.0.1"
pystow = ">=0.5.0"
loguru = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
autoflake = "^1.7.7"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}


[tool.poetry.scripts]
monarch = "monarch_py.cli:app"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["src"]
